; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_videobuf-dma-sg.c_videobuf_dma_init_overlay.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_videobuf-dma-sg.c_videobuf_dma_init_overlay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.videobuf_dmabuf = type { i32, i32, i64 }

@.str = private unnamed_addr constant [37 x i8] c"init overlay [%d pages @ bus 0x%lx]\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @videobuf_dma_init_overlay(%struct.videobuf_dmabuf* %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.videobuf_dmabuf*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.videobuf_dmabuf* %0, %struct.videobuf_dmabuf** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  %11 = load i64, i64* %8, align 8
  %12 = call i32 @dprintk(i32 1, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %10, i64 %11)
  %13 = load i32, i32* %7, align 4
  %14 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %6, align 8
  %15 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load i64, i64* %8, align 8
  %17 = icmp eq i64 0, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %4
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %5, align 4
  br label %28

21:                                               ; preds = %4
  %22 = load i64, i64* %8, align 8
  %23 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %6, align 8
  %24 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %23, i32 0, i32 2
  store i64 %22, i64* %24, align 8
  %25 = load i32, i32* %9, align 4
  %26 = load %struct.videobuf_dmabuf*, %struct.videobuf_dmabuf** %6, align 8
  %27 = getelementptr inbounds %struct.videobuf_dmabuf, %struct.videobuf_dmabuf* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  store i32 0, i32* %5, align 4
  br label %28

28:                                               ; preds = %21, %18
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @dprintk(i32, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
